--- a/frontend/app/login/login.module.css
+++ b/frontend/app/login/login.module.css
@@ -98,7 +98,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .login {
+  .loginForm {
     padding: 1rem;
   }
 
